# anki-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLANNED_FEATURES.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  ruff.toml  spot.yml  words.txt
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  dependabot.yml  security.yml
docker/: Dockerfile
docs/: SETUP.md
scripts/: README.md  create-feature.sh  create-pr.sh  create-release.sh  export_words.py  full-release-cycle.sh  import_words.py  merge-pr.sh  pr-status.sh  quick-fix.sh
sqlite:/: :memory:
src/: __init__.py  bot_handler.py  config.py  database.py  spaced_repetition.py  text_parser.py  utils.py  word_processor.py
src/core/database/: connection.py  database_manager.py  models.py
src/core/database/repositories/: __init__.py  progress_repository.py  user_repository.py  word_repository.py
src/core/handlers/: command_handlers.py  message_handlers.py
src/core/locks/: __init__.py  user_lock_manager.py
src/core/scheduler/: __init__.py  reminder_scheduler.py
src/core/session/: __init__.py  session_manager.py
src/core/state/: __init__.py  user_state_manager.py
tasks/: task1.md
tests/: test_add_words_bug.py  test_add_words_fix_verification.py  test_article_handling.py  test_article_updates.py  test_article_validation.py  test_authorization.py  test_command_interruption.py  test_daily_reminders.py  test_database.py  test_date_handling.py  test_datetime_comparison_bug.py  test_exercise_completion_workflow.py  test_false_positive_bug.py  test_foreign_word_filtering.py  test_inline_keyboard_data.py  test_integration.py  test_learning_progress.py  test_message_editing_bug.py  test_mixed_language_processing.py  test_multi_user_isolation.py  test_multi_user_study_session.py  test_randomization_feature.py  test_rate_limiting.py  test_reminder_scheduler.py  test_spaced_repetition.py  test_stats_field_mapping.py  test_study_session_flow.py  test_study_verbs_feature.py  test_text_parser.py  test_utils.py  test_word_processor.py
